; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/cxgb3/extr_iwch_provider.c_iwch_alloc_stats.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/cxgb3/extr_iwch_provider.c_iwch_alloc_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rdma_hw_stats = type { i32 }
%struct.ib_device = type { i32 }

@names = common dso_local global i32 0, align 4
@NR_COUNTERS = common dso_local global i64 0, align 8
@RDMA_HW_STATS_DEFAULT_LIFESPAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.rdma_hw_stats* (%struct.ib_device*, i64)* @iwch_alloc_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.rdma_hw_stats* @iwch_alloc_stats(%struct.ib_device* %0, i64 %1) #0 {
  %3 = alloca %struct.rdma_hw_stats*, align 8
  %4 = alloca %struct.ib_device*, align 8
  %5 = alloca i64, align 8
  store %struct.ib_device* %0, %struct.ib_device** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i32, i32* @names, align 4
  %7 = call i64 @ARRAY_SIZE(i32 %6)
  %8 = load i64, i64* @NR_COUNTERS, align 8
  %9 = icmp ne i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUILD_BUG_ON(i32 %10)
  %12 = load i64, i64* %5, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store %struct.rdma_hw_stats* null, %struct.rdma_hw_stats** %3, align 8
  br label %20

15:                                               ; preds = %2
  %16 = load i32, i32* @names, align 4
  %17 = load i64, i64* @NR_COUNTERS, align 8
  %18 = load i32, i32* @RDMA_HW_STATS_DEFAULT_LIFESPAN, align 4
  %19 = call %struct.rdma_hw_stats* @rdma_alloc_hw_stats_struct(i32 %16, i64 %17, i32 %18)
  store %struct.rdma_hw_stats* %19, %struct.rdma_hw_stats** %3, align 8
  br label %20

20:                                               ; preds = %15, %14
  %21 = load %struct.rdma_hw_stats*, %struct.rdma_hw_stats** %3, align 8
  ret %struct.rdma_hw_stats* %21
}

declare dso_local i32 @BUILD_BUG_ON(i32) #1

declare dso_local i64 @ARRAY_SIZE(i32) #1

declare dso_local %struct.rdma_hw_stats* @rdma_alloc_hw_stats_struct(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
